# graphics_3d

./: Cargo.toml  LICENSE  README.md
src/: app.rs  color.rs  context.rs  geometry.rs  lib.rs  pipeline.rs  renderer.rs  state.rs  studio.rs
src/domain/: plane.rs
src/domain/d2/: geometry.rs  mod.rs  pipeline.rs  renderer.rs  shader.wgsl
src/wgsl/: shader.wgsl
