[package]
name = "graphics_3d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.13.1", features = ["derive"] }
glam = { version = "0.24.0", features = ["bytemuck"] }
wgpu = "0.16.0"
winit = "0.28.3"
